# LANL-DigitalTwin

./: .gitignore  Dockerfile  README.md  requirements.txt  run_fanuc.bash  run_robot.bash
src/RoboAgRL/: CMakeLists.txt  package.xml  setup.py
src/RoboAgRL/config/: fanuc_lrmate200id_14l_params.yaml  mycobot_600.rviz
src/RoboAgRL/launch/: gazebo.launch.py
src/RoboAgRL/urdf/ElephantMyCobotPro600/: mycobot_pro_600.urdf
src/fanuc_lrmate200id_14l/: CMakeLists.txt  package.xml  setup.py
src/fanuc_lrmate200id_14l/config/: fanuc.rviz  fanuc_lrmate200id_14l_params.yaml
src/fanuc_lrmate200id_14l/launch/: fanuc_gazebo.launch.py
src/fanuc_lrmate200id_14l/scripts/: set_joint_states.py
src/fanuc_lrmate200id_14l/worlds/: glovebox_aprilcube.world
src/robo_ag_rl/: CMakeLists.txt  package.xml  setup.py
src/robo_ag_rl/config/: fanuc.rviz  roboag.rviz
src/robo_ag_rl/launch/: gazebo.launch.py
src/robo_ag_rl/models/apriltag/: aprilTagBox.sdf
src/robo_ag_rl/scripts/: set_joint_states.py
src/robo_ag_rl/scripts/camera/: serial_camera.py
src/robo_ag_rl/scripts/detection/: april_tag_detection.py
src/robo_ag_rl/scripts/gazebo/: gazebo_object_state.py
src/robo_ag_rl/scripts/gui/: joint_pos_gui.py
src/robo_ag_rl/scripts/robot/: connect_robot.py
src/robo_ag_rl/src/: main.py  robot_env.py
src/robo_ag_rl/urdf/: fanuc_lrmate200id_14l.urdf
src/robo_ag_rl/urdf/ElephantMyCobotPro600/: mycobot_pro_600.urdf
src/robo_ag_rl/worlds/: glovebox.sdf
